.metadata/.plugins/org.eclipse.cdt.ui/testing_slave.build.log
08:08:39 **** Incremental Build of configuration Debug for project testing_slave ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:165:13: error: invalid storage class for function 'MX_SPI1_Init'
  165 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:202:13: error: invalid storage class for function 'MX_GPIO_Init'
  202 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:245:1: error: expected declaration or statement at end of input
  245 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:51:13: warning: 'MX_GPIO_Init' used but never defined
   51 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:52:13: warning: 'MX_SPI1_Init' used but never defined
   52 | static void MX_SPI1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:236:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  236 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:202:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  202 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:165:13: warning: 'MX_SPI1_Init' defined but not used [-Wunused-function]
  165 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:123:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  123 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

08:08:39 Build Failed. 4 errors, 6 warnings. (took 308ms)

